Quartz sync: Aug 20, 2024, 4:30 AM

--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Белинн Стелмейн.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Белинн Стелмейн.md
@@ -21,6 +21,8 @@ dead: false
 > 
 > ## Белинн Стелмейн
 > 
+> ![[Белинн Стелмейн.png]]
+> 
 > ### Описание
 > 
 > | Тип | Персонаж |
@@ -32,7 +34,7 @@ dead: false
 > | Организация | [[Совет Четырёх]] |
 > | Статус | Жив(а) |
 
-Герцог Белинн Стелмейн - одним из членов [[Совет Четырёх|Совета Четырех]] в конце #XV XV века ЛД. Она явдяется расчётливым бизнесменом.
+Герцог Белинн Стелмейн - одним из членов [[Совет Четырёх|Совета Четырех]] в конце #XV XV века ЛД. Является расчётливым бизнесменом.
 
 #### Личность
 Герцогиня консервативна и неизобретательна во всех вопросах, кроме торговой стратегии и финансовых потоков. Со времени болезни она перенесла несколько спорных судебных решений и заявлений, однако, учитывая её богатство и деловые связи, большинство влиятельных игроков города видят её влиятельным союзником или пешкой, нежели целью. По этой причине некоторые считают, что ее приступ был скорее неудачным стечением обстаятельств, чем целенаправленной целью атаки.
