Quartz sync: Aug 20, 2024, 5:15 AM

--- a/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Бипин.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Бипин.md
@@ -7,7 +7,7 @@ race:
 gender: М
 dead: true
 organisation:
-  - "[[Бессмертная Андайн|Команда Бессмертной Андайн]]"
+  - "[[Бессмертная Андайн|Команда Селес]]"
 ---
 
 > [!infobox]
@@ -24,9 +24,7 @@ organisation:
 > | Местонахождение | Долина ледяного ветра |
 > | Раса | Драконорождённый |
 > | Пол | М |
-> | Организация | Команда Бессмертной Андайн |
+> | Организация | [[Бессмертная Андайн\|Команда Селес]] |
 > | Статус | Мёртв(а) |
-
-
 
 Боцман. Всеобщий любимчик, Бипин. Помогал с ремонтом, отвечал за запасы. Трутяга, хоть и часто ошибался. Сложно злиться на того, кто искренне старается хорошо выполнять свою работу. Груда мышц, но душевная. Очень искренний и верит всем на слово. Немного медлительный. 
