--- a/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Гвилим.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Гвилим.md
@@ -1,11 +1,32 @@
 ---
 type: Персонаж
-location: 
-- Долина ледяного ветра
-race: Человек
+location:
+  - Долина ледяного ветра
+race:
+  - Человек
 gender: М
+organisation:
+  - "[[Бессмертная Андайн|Команда Селес]]"
+dead: false
 ---
-![[Pasted image 20240220213803.png|300]]
+
+> [!infobox]
+> 
+> ## Гвилим
+> 
+> ![[Гвилим.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Долина ледяного ветра |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Бессмертная Андайн\|Команда Селес]] |
+> | Статус | Жив(а) |
+
 
 Пират уже в возрасте, бывший капитан корабля, который сам передал свою роль [[Фланн]]. Раньше управлял, держа корабль под своим крепким кулаком, однако нынче чаще бухает с моряками, нежели делает что-то полезное. Однако любит запеть песню про то, как раньше то он ух был. Часто помогает в общих вопросах капитану, однако в основном его обязанностями занимается кто-либо другой. 
 Однако в сражениях он всё ещё хорош, тут он серьёзно к делу подходит.
