--- a/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Селес.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Селес.md
@@ -8,7 +8,24 @@ race:
   - Тритон
 gender: Ж
 organisation:
-  - ""
+  - "[[Бессмертная Андайн|Команда Селес]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Селес
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Эмили |
+> | Местонахождение | Долина ледяного ветра |
+> | Раса | Тритон |
+> | Пол | Ж |
+> | Организация | [[Бессмертная Андайн\|Команда Селес]] |
+> | Статус | Мёртв(а) |
+
 Погибла от рук [[Дарин|Дарина]], но была воскрешена своей сестрой, [[Ксин]] после сделки с [[Мурена|Муреной]]. Пару раз пересекалась с Баст и сейчас в негативно-нейтральных отношениях, в основном из-за действий своей сестры. Забрала у Баст доспехи. 
-Сейчас захватила [[корабль Азар]] и является его новым капитаном.
+Сейчас захватила [[Бессмертная Андайн|корабль]] и является его новым капитаном.
