--- a/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Сол.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Сол.md
@@ -6,8 +6,26 @@ race:
   - Дроу
 gender: Ж
 organisation:
+  - "[[Бессмертная Андайн|Команда Селес]]"
+dead: false
 ---
-![[Pasted image 20240220214012.png|300]]
+
+> [!infobox]
+> 
+> ## Сол
+> 
+> ![[Сол.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Долина ледяного ветра |
+> | Раса | Дроу |
+> | Пол | Ж |
+> | Организация | [[Бессмертная Андайн\|Команда Селес]] |
+> | Статус | Жив(а) |
 
 Штурман. Самый умный член команды, находится на корабле уже давно, как минимум во времена Гвилима уже была на корабле. За эти годы начала мастерски разбираться в картах. Во многом из-за её таланта в смеси с грамотным руководство [[Фланн]] корабль и смог добраться до Хландетта.
 Несмотря на свой внешний вид, весьма добродушна и готова к сотрудничеству. Неплохо владеет магией, однако её источник не известен никому, кроме наверное [[Фланн|капи]][[Селес|тана]]. Но особо никто и не вдаётся в подробности. 
