--- a/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Фланн.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Фланн.md
@@ -2,12 +2,30 @@
 type: Персонаж
 location:
   - Долина ледяного ветра
-race: Человек
+race:
+  - Человек
 gender: Ж
-
+organisation:
+  - "[[Бессмертная Андайн|Команда Селес]]"
+dead: true
 ---
-![[Pasted image 20240220213302.png|300]]
 
+> [!infobox]
+> 
+> ## Фланн
+> 
+> ![[Фланн.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Долина ледяного ветра |
+> | Раса | Человек |
+> | Пол | Ж |
+> | Организация | [[Бессмертная Андайн\|Команда Селес]] |
+> | Статус | Мёртв(а) |
 
 Бывшая капитан, до прихода [[Селес]]. Сильная женщина, как в плане грубой силы, так и ментально. Уравновешенная, в каждой ситуации умела найти выход. Однако не скупилась использовать силы других членов команды, если там они бы справились лучше, чем она сама. Проще говоря, лишней гордыней не обладала. 
 С ней считались и считали хорошим командиром, ведь она могла легко успокоить любую внутреннюю неразбериху или правильно продумать и объяснить действия для команды при внешнем конфликте. 
