--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Азария.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Азария.md
@@ -6,9 +6,32 @@ location:
   - Долина ледяного ветра
   - Хлондет
 race:
-  - - Юань-ти
+  - "[[Юань-ти]]"
 gender: Ж
 organisation:
+  - "[[Бессмертная Андайн|Команда Селес]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Азария
+> 
+> ![[Азария.png]]
+> ![[Азария-1.png]]
+> ![[Азария-2.png]]
+> ![[Азария-3.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Азар |
+> | Местонахождение | Долина ледяного ветра,Хлондет |
+> | Раса | [[Юань-ти]] |
+> | Пол | Ж |
+> | Организация | [[Бессмертная Андайн|Команда Селес]] |
+> | Статус | Жив(а) |
+
 
 
