--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Вик Гральт.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Вик Гральт.md
@@ -8,6 +8,25 @@ location:
 race:
   - Гитцерай
 gender: Ж
-organisation: []
+organisation: 
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Вик Гральт
+> 
+> ![[Вик Гральт.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Вик |
+> | Местонахождение | Долина ледяного ветра,[[Невервинтер]] |
+> | Раса | Гитцерай |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
 
