--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Магнус Сорн.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Магнус Сорн.md
@@ -9,4 +9,24 @@ race:
   - Эльф
 gender: М
 organisation:
+  - "[[Бессмертная Андайн|Команда Селес]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Магнус Сорн
+> 
+> ![[Магнус Сорн.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Тей,Долина ледяного ветра |
+> | Раса | Человек,Эльф |
+> | Пол | М |
+> | Организация | [[Бессмертная Андайн|Команда Селес]] |
+> | Статус | Жив(а) |
+
