--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Маления Айнхард.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Маления Айнхард.md
@@ -1,10 +1,29 @@
 ---
 aliases: 
 type: Персонаж
-location: 
+location:
   - Долина ледяного ветра
-race: Дженази огня
+race:
+  - Дженази огня
 gender: Ж
-organisation:
-dead: 
+organisation: 
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Маления Айнхард
+> 
+> ![[Маления Айнхард.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Долина ледяного ветра |
+> | Раса | Дженази огня |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
