--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Опус.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Опус.md
@@ -1,10 +1,30 @@
 ---
 aliases: 
 type: Персонаж
-location: 
+location:
   - Долина ледяного ветра
-race: Бес
+race:
+  - Бес
 gender: Неизвестно
-organisation:
-dead: 
+organisation: 
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Опус
+> 
+> ![[Опус.jpg]]
+> ![[Опус.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Долина ледяного ветра |
+> | Раса | Бес |
+> | Пол | Неизвестно |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
