--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Орнштейн Аддер Айнхард.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Орнштейн Аддер Айнхард.md
@@ -7,11 +7,32 @@ location:
   - Долина ледяного ветра
   - "[[Невервинтер]]"
 race:
-  - Аберрация
+  - Аберрант
   - Возрождённый
 gender: М
 organisation:
   - "[[Жентарим]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Орнштейн Аддер Айнхард
+> 
+> ![[Орнштейн Аддер Айнхард.png]]
+> ![[Орнштейн Аддер Айнхард-1.png]]
+> ![[Орнштейн Аддер Айнхард-2.png]]
+> ![[Орнштейн Аддер Айнхард-3.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Штейн,Штейна,Штейну |
+> | Местонахождение | Долина ледяного ветра,[[Невервинтер]] |
+> | Раса | Аберрация,Возрождённый |
+> | Пол | М |
+> | Организация | [[Жентарим]] |
+> | Статус | Жив(а) |
 
 Один из учеников [[Опал]]. 
