--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Скаэль.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Скаэль.md
@@ -4,7 +4,27 @@ type: Персонаж
 location:
   - Неизвестно
   - Долина ледяного ветра
-race: Эльф
+race:
+  - Эльф
 gender: М
-organisation:
+organisation: 
+dead:
 ---
+
+> [!infobox]
+> 
+> ## Скаэль
+> 
+> ![[Скаэль.jpg]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Неизвестно,Долина ледяного ветра |
+> | Раса | Эльф |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
