--- a/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Сангмин.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Команда Селес/Сангмин.md
@@ -4,8 +4,28 @@ location:
   - Долина ледяного ветра
 race: Человек
 gender: М
+organisation:
+  - "[[Бессмертная Андайн|Команда Селес]]"
+dead: TRUE
 ---
- ![[94_oooo.plus.png|200x200]] ![[Pasted image 20240220215013.png|200x200]]
+
+> [!infobox]
+> 
+> ## Сангмин
+> 
+> ![[Сангмин.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Долина ледяного ветра |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Бессмертная Андайн\|Команда Селес]] |
+> | Статус | Мёртв(а) |
+
 Правая рука Фланн. Сложно понять что у него на уме. Со стороны добродушный весельчак, однако умеет себя взять в руки и серьёзно подойти к делу. Постоянно рядом с [[Фланн|капитаном]], заменяет её если надо. Знает всех и обо всём и в целом, что касается слушков и подобного. Хотя о нём известно не так много. Зачастую любит решать конфликты смекалкой, а не силой, хотя и в фехтовании он силён. 
 
 Искренне же уважает и верен только себе и капитану. 
