--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Ацереща.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Ацереща.md
@@ -1,10 +1,27 @@
 ---
 aliases: 
 type: Персонаж
-location: 
+location:
   - Долина ледяного ветра
-race: Элементаль
+race:
+  - Элементаль
 gender: Неизвестно
-organisation:
-dead: 
+organisation: 
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Ацереща
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Долина ледяного ветра |
+> | Раса | Элементаль |
+> | Пол | Неизвестно |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
