Quartz sync: Aug 20, 2024, 8:02 PM

--- a/content/Действующие лица/Местоположение неизвестно/Акили Баст.md
+++ b/content/Действующие лица/Местоположение неизвестно/Акили Баст.md
@@ -11,8 +11,25 @@ race:
   - Табакси
 gender: Ж
 organisation:
+dead: false
 ---
-![[bastref.png|220]]![[Bast.png|220]]![[BastPortret.png|220]]
+
+> [!infobox]
+> 
+> ## Акили Баст
+>
+>![[bastref.png|220]]![[Bast.png|220]]![[BastPortret.png|220]]
+>
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Баст |
+> | Местонахождение | Неизвестно,[[Врата Бальдура]],Фанделин,[[Невервинтер]] |
+> | Раса | Табакси |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Жива  |
 
 Суетная заклинательница, у которой магия иногда вырывается из-под контроля. 
 
