--- a/content/Действующие лица/Местоположение неизвестно/Джарлакс.md
+++ b/content/Действующие лица/Местоположение неизвестно/Джарлакс.md
@@ -1,4 +1,9 @@
 ---
+aliases: 
+- Джарлаксом
+- Джарлаксу
+- Джарлакса
+- Зардос Зорд
 type: Персонаж
 location:
   - Неизвестно
@@ -6,4 +11,27 @@ race:
   - Дроу
 gender: М
 role: Джарлакс
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Джарлакс
+> 
+> 
+> ![[Джарлакс.png]]
+> ![[Джарлакс-1.png]]
+> ![[Джарлакс-2.png]]
+> 
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Джарлаксом,Джарлаксу,Джарлакса,Зардос Зорд |
+> | Местонахождение | Неизвестно |
+> | Раса | Дроу |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
