--- a/content/Действующие лица/Местоположение неизвестно/Косхек.md
+++ b/content/Действующие лица/Местоположение неизвестно/Косхек.md
@@ -8,6 +8,25 @@ location:
 race:
   - Людоящер
 gender: М
-organisation:
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Косхек
+> 
+> ![[Косхек.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Косхеку |
+> | Местонахождение | Пандемониум,Неизвестно |
+> | Раса | Людоящер |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+> | Статус | Жив(а) |
+
 Покровитель [[Вик Гральт]]. Сейчас путешествует с [[Опал]]
