--- a/content/Действующие лица/Местоположение неизвестно/Массирак.md
+++ b/content/Действующие лица/Местоположение неизвестно/Массирак.md
@@ -6,6 +6,23 @@ location:
 race:
   - "[[Саррукхи|Саррукх]]"
 gender: М
+organisation: 
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Массирак
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Долина ледяного ветра,Неизвестно |
+> | Раса | [[Саррукхи|Саррукх]] |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
 
 [[Саррукхи|Саррукх]], который был заточен в храме на протяжении примерно 2000 лет. На данный момент ищет осколки [[Криншинибон|криншинибона]] на дальнем севере.
