--- a/content/Действующие лица/Местоположение неизвестно/Миска.md
+++ b/content/Действующие лица/Местоположение неизвестно/Миска.md
@@ -5,12 +5,29 @@ location:
   - "[[Верхний город]]"
   - "[[Врата Бальдура]]"
   - Неизвестно
+  - Неизвестно
 race:
   - Неизвестно
-gender: 
-organisation:
+  - "[[Иллитиды]]"
+gender: Неизвестно
+organisation: 
+dead:
 ---
 
+> [!infobox]
+> 
+> ## Миска
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Верхний город]],[[Врата Бальдура]],Неизвестно |
+> | Раса | Неизвестно,[[Иллитиды]] |
+> | Пол | Неизвестно |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
 
 На данный момент не известно, чем конкретно она являлась. [[Мирай Стелмейн|Мирай]] нашла ее на месте свой смерти и с помощью угроз смогла наладить с ней телепатическую связь.
 
