--- a/content/Действующие лица/Местоположение неизвестно/Опал.md
+++ b/content/Действующие лица/Местоположение неизвестно/Опал.md
@@ -8,6 +8,24 @@ location:
 race:
   - Гном
 gender: Ж
-organisation:
+dead: false 
 ---
+
+> [!infobox]
+> 
+> ## Опал
+> 
+> ![[Опал.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Неизвестно,План теней,Эфир |
+> | Раса | Гном |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
 Сейчас путешествует с [[Косхек|Косхеком]] где-то на плане теней.
