Quartz sync: Aug 21, 2024, 5:51 PM

--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Азария.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Азария.md
@@ -30,7 +30,7 @@ dead: false
 > | Местонахождение | Долина ледяного ветра,Хлондет |
 > | Раса | [[Юань-ти]] |
 > | Пол | Ж |
-> | Организация | [[Бессмертная Андайн|Команда Селес]] |
+> | Организация | [[Бессмертная Андайн\|Команда Селес]] |
 > | Статус | Жив(а) |
 
 
