--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Магнус Сорн.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Магнус Сорн.md
@@ -27,6 +27,6 @@ dead: false
 > | Местонахождение | Тей,Долина ледяного ветра |
 > | Раса | Человек,Эльф |
 > | Пол | М |
-> | Организация | [[Бессмертная Андайн|Команда Селес]] |
+> | Организация | [[Бессмертная Андайн\|Команда Селес]] |
 > | Статус | Жив(а) |
 
