--- a/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Орнштейн Аддер Айнхард.md
+++ b/content/Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Орнштейн Аддер Айнхард.md
@@ -28,9 +28,9 @@ dead: false
 > 
 > | Тип | Персонаж |
 > | --- | --- |
-> | Другие имена| Штейн,Штейна,Штейну |
+> | Другие имена| Штейн |
 > | Местонахождение | Долина ледяного ветра,[[Невервинтер]] |
-> | Раса | Аберрация,Возрождённый |
+> | Раса | Аберрант, Возрождённый |
 > | Пол | М |
 > | Организация | [[Жентарим]] |
 > | Статус | Жив(а) |
