Quartz sync: Aug 24, 2024, 9:46 PM

--- a/content/Действующие лица/Местоположение неизвестно/Страд.md
+++ b/content/Действующие лица/Местоположение неизвестно/Страд.md
@@ -10,3 +10,19 @@ organisation:
 dead: false
 ---
 
+> [!infobox]
+> 
+> ## Страд
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Неизвестно |
+> | Раса | Вампир |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
+
