--- a/content/Действующие лица/Поместье Рейвентри/Вудфеллоу.md
+++ b/content/Действующие лица/Поместье Рейвентри/Вудфеллоу.md
@@ -12,4 +12,21 @@ gender: Неизвестно
 organisation: 
 dead: 
 ---
+
+ 
+> [!infobox]
+> 
+> ## Вудфеллоу
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных|
+> | Местонахождение | [[Поместье Рейвентри]],План фей,Летний двор |
+> | Раса | Фея,Дерево |
+> | Пол | Неизвестно |
+> | Организация | Нет данных |
+> | Статус | Жив  |
+
 Библиотекарь, все стеллажи будто являются частью его корней. Его корни простираются по всему плану фей.
