--- a/content/Действующие лица/Поместье Рейвентри/Ежевичка.md
+++ b/content/Действующие лица/Поместье Рейвентри/Ежевичка.md
@@ -3,7 +3,7 @@ aliases:
   - стрекоза
 type: Персонаж
 location:
-  - "[[Поместье Рейвентри|Дом]]"
+  - "[[Поместье Рейвентри]]"
   - План фей
 race:
   - Стрекоза
@@ -12,3 +12,4 @@ organisation:
 dead:
 ---
 Стрекоза длинной метра 3. Плотоядная. Блюёт драг-металлами и драг-камнями. Судя по всему - гнездится.
+Видимо - из 2ое.
