--- a/content/Действующие лица/Поместье Рейвентри/Иллана Корвинар.md
+++ b/content/Действующие лица/Поместье Рейвентри/Иллана Корвинар.md
@@ -9,6 +9,7 @@ race:
   - Неизвестно
 gender: Ж
 organisation: 
+dead: TRUE
 ---
 Почившая жена [[Дарриус Корвинар|Дарриуса]] и сестра [[Перриус Аннматар|Перриуса]]. Вместе с мужем прожили 18 лет, хотя изначально в их брак никто не верил. Госпожа тяжело заболела, из-за чего умерла. Ничего не помогало. 
 
