--- a/content/Действующие лица/Поместье Рейвентри/Красная повариха.md
+++ b/content/Действующие лица/Поместье Рейвентри/Красная повариха.md
@@ -5,6 +5,7 @@ aliases:
   - Повариха
   - Повариху
   - Поварихой
+  - Поварихе
 type: Персонаж
 location:
   - "[[Поместье Рейвентри]]"
@@ -13,6 +14,6 @@ race:
   - Карга
 gender: Ж
 organisation: 
-dead:
+dead: TRUE
 ---
 Карга, направляющая делами кухни. Раздражает всех, но никто не может её выдворить. Кормит [[Разгул|Разгула]].
