--- a/content/Действующие лица/Местоположение неизвестно/Уильям Орнест.md
+++ b/content/Действующие лица/Местоположение неизвестно/Уильям Орнест.md
@@ -9,5 +9,20 @@ race:
 gender: М
 ---
 
+> [!infobox]
+> 
+> ## Уильям Орнест
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Корабль Аларика]],[[Врата Бальдура]],Неизвестно |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Капитан судна, на которое попала наша команда. Несмотря на поведение в начале, он оказался лишь пешкой своего прошлого капитана, к которому он и должен был привести судно и команду, которая бы исследовала храм. 
 В последствии вернулся на свой изначальный корабль и стал его новым капитаном.
