Quartz sync: Aug 24, 2024, 10:16 PM

--- a/content/Действующие лица/Поместье Рейвентри/Дарриус Корвинар.md
+++ b/content/Действующие лица/Поместье Рейвентри/Дарриус Корвинар.md
@@ -9,4 +9,20 @@ location:
 race: Неизвестно
 gender: М
 ---
+
+> [!infobox]
+> 
+> ## Дарриус Корвинар
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Дарриус |
+> | Местонахождение | [[Поместье Рейвентри]] |
+> | Раса | Неизвестно |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Глава [[Поместье Рейвентри|поместья Рейвентри]]. Отец [[Элсиет Корвинар]] и муж почившей [[Иллана Корвинар|Илланы]]. Местонахождение не известно.
