--- a/content/Действующие лица/Поместье Рейвентри/Ежевичка.md
+++ b/content/Действующие лица/Поместье Рейвентри/Ежевичка.md
@@ -11,5 +11,21 @@ gender: Неизвестно
 organisation: 
 dead:
 ---
+
+> [!infobox]
+> 
+> ## Ежевичка
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| стрекоза |
+> | Местонахождение | [[Поместье Рейвентри]],План фей |
+> | Раса | Стрекоза |
+> | Пол | Неизвестно |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Стрекоза длинной метра 3. Плотоядная. Блюёт драг-металлами и драг-камнями. Судя по всему - гнездится.
 Видимо - из 2ое.
