--- a/content/Действующие лица/Поместье Рейвентри/Иллана Корвинар.md
+++ b/content/Действующие лица/Поместье Рейвентри/Иллана Корвинар.md
@@ -11,6 +11,22 @@ gender: Ж
 organisation: 
 dead: TRUE
 ---
+
+> [!infobox]
+> 
+> ## Иллана Корвинар
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Иллана,жена Дарриуса |
+> | Местонахождение | [[Поместье Рейвентри]] |
+> | Раса | Неизвестно |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Мёртв(а) |
+
 Почившая жена [[Дарриус Корвинар|Дарриуса]] и сестра [[Перриус Аннматар|Перриуса]]. Вместе с мужем прожили 18 лет, хотя изначально в их брак никто не верил. Госпожа тяжело заболела, из-за чего умерла. Ничего не помогало. 
 
 Ныне похоронена в склепе, конкретно местонахождение неизвестно.
