--- a/content/Действующие лица/Поместье Рейвентри/Красная повариха.md
+++ b/content/Действующие лица/Поместье Рейвентри/Красная повариха.md
@@ -16,4 +16,20 @@ gender: Ж
 organisation: 
 dead: TRUE
 ---
+
+> [!infobox]
+> 
+> ## Красная повариха
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Повариха |
+> | Местонахождение | [[Поместье Рейвентри]],План фей |
+> | Раса | Карга |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Мёртв(а) |
+
 Карга, направляющая делами кухни. Раздражает всех, но никто не может её выдворить. Кормит [[Разгул|Разгула]].
