--- a/content/Действующие лица/Поместье Рейвентри/Перриус Аннматар.md
+++ b/content/Действующие лица/Поместье Рейвентри/Перриус Аннматар.md
@@ -11,6 +11,22 @@ race:
   - Призрак
 gender: М
 ---
+
+> [!infobox]
+> 
+> ## Перриус Аннматар
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Перриус |
+> | Местонахождение | [[Поместье Рейвентри]],Материальный план |
+> | Раса | Призрак |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Двоюродный брат [[Иллана Корвинар|Илланы]]. 
 
 *Сказано в слух **Тори**:*
