--- a/content/Действующие лица/Поместье Рейвентри/Стуктина.md
+++ b/content/Действующие лица/Поместье Рейвентри/Стуктина.md
@@ -16,5 +16,20 @@ organisation:
 dead:
 ---
 
+> [!infobox]
+> 
+> ## Стуктина
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Стуктины,Стуктину,Стуктиной |
+> | Местонахождение | [[Поместье Рейвентри]],План фей |
+> | Раса | Водная карга,Человек,Карга |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Подруга [[Сэдия|Сэдии]]. Была проклята [[Эрнива|Эрнивой]] и стала водной каргой, после чего искала способ снять проклятие. 
 До проклятия была обычной девочкой, растущей в семье фармацевтов в Амне. Уже многой подзабыла о ремесле, после 100 лет то.
