--- a/content/Действующие лица/Поместье Рейвентри/Сэдия.md
+++ b/content/Действующие лица/Поместье Рейвентри/Сэдия.md
@@ -12,4 +12,20 @@ race:
 gender: Ж
 organisation:
 ---
+
+> [!infobox]
+> 
+> ## Сэдия
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Сэдии,Сэдию |
+> | Местонахождение | [[Поместье Рейвентри]],План фей |
+> | Раса | Дриада,Фея |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Сенешаль поместья. Дриада, временно отвечающая за дела в особняке на плане фей.
