--- a/content/Действующие лица/Поместье Рейвентри/Тимнос.md
+++ b/content/Действующие лица/Поместье Рейвентри/Тимнос.md
@@ -9,4 +9,20 @@ gender: М
 organisation: 
 dead: 
 ---
+
+> [!infobox]
+> 
+> ## Тимнос
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Поместье Рейвентри]],План фей |
+> | Раса | Нет данных |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Садовник поместья. Нынче куда-то исчез. Ухаживал за [[Шамбли|шаркуном]].
