--- a/content/Действующие лица/Поместье Рейвентри/Уск.md
+++ b/content/Действующие лица/Поместье Рейвентри/Уск.md
@@ -9,4 +9,20 @@ race:
   - Эльф
 gender: М
 ---
+
+> [!infobox]
+> 
+> ## Уск
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Поместье Рейвентри]],План фей,План теней,Материальный план |
+> | Раса | Эльф |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Черноволосый эльф. Дворецкий [[Поместье Рейвентри|поместья]]. Есть ещё версия Уска на материальном плане и теневом, однако призвала нас его версия с плана Фей. Расшепило его на несколько версий после взрыва в банкетном зале. Его версия на материальном плане никак не может взаимодействовать со своим окружением, но может следить.
