--- a/content/Действующие лица/Поместье Рейвентри/Элсиет Корвинар.md
+++ b/content/Действующие лица/Поместье Рейвентри/Элсиет Корвинар.md
@@ -11,4 +11,19 @@ gender: Ж
 organisation: 
 ---
 
+> [!infobox]
+> 
+> ## Элсиет Корвинар
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Элсиет |
+> | Местонахождение | [[Поместье Рейвентри]] |
+> | Раса | Неизвестно,Сильвария |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Леди была изгнана на план фей, существует только одна её копия. Первый ребёнок [[Дарриус Корвинар|Дарриуса]] и [[Иллана Корвинар|Илланы]]. Сейчас является сильварией - молодым зелёным драконом с манией величия. 
