--- a/content/Действующие лица/Поместье Рейвентри/Эрнива.md
+++ b/content/Действующие лица/Поместье Рейвентри/Эрнива.md
@@ -13,4 +13,20 @@ gender: Ж
 organisation: 
 dead: 
 ---
+
+> [!infobox]
+> 
+> ## Эрнива
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Поместье Рейвентри]],План фей |
+> | Раса | русалка |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Подруга [[Сэдия|Сэдии]]. Прокляла [[Стуктина|Стуктину]] из зависти. Изначально не является русалкой, но постоянно гонится за красотой.
