--- a/content/Действующие лица/Считаются мёртвыми/Абдель Адриан.md
+++ b/content/Действующие лица/Считаются мёртвыми/Абдель Адриан.md
@@ -13,3 +13,19 @@ organisation:
   - "[[Герои Шири (заполнить)]]"
 dead: true
 ---
+
+> [!infobox]
+> 
+> ## Абдель Адриан
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Верхний город]],[[Врата Бальдура]] |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Совет Четырёх]],[[Правительство Врат Бальдура]],[[Герои Шири (заполнить)]] |
+> | Статус | Мёртв(а) |
+
