--- a/content/Действующие лица/Считаются мёртвыми/Дарин.md
+++ b/content/Действующие лица/Считаются мёртвыми/Дарин.md
@@ -3,11 +3,11 @@ aliases:
 type: Персонаж
 location: 
 race: 
-gender: МЖ
+gender: М
 organisation:
 dead: 
 ---
- 
+
 > [!infobox]
 > 
 > ## Дарин
@@ -16,9 +16,10 @@ dead:
 > 
 > | Тип | Персонаж |
 > | --- | --- |
-> | Другие имена| Нет данных|
-> | Местонахождение | undefined |
-> | Раса | undefined |
-> | Пол | undefined |
+> | Другие имена| Нет данных |
+> | Местонахождение | Нет данных |
+> | Раса | Нет данных |
+> | Пол | М |
 > | Организация | Нет данных |
-> | Статус |Мёртв  |
+> | Статус | Нет данных |
+
