--- a/content/Действующие лица/Считаются мёртвыми/Дретч.md
+++ b/content/Действующие лица/Считаются мёртвыми/Дретч.md
@@ -7,4 +7,20 @@ gender: М
 organisation: 
 dead: true
 ---
+
+> [!infobox]
+> 
+> ## Дретч
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Нет данных |
+> | Раса | Нет данных |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Мёртв(а) |
+
 Около-бессмертное существо, что [[Коран]] держал у себя в подвале для дальнейшего изучения. Был найден в канализациях под [[Врата Бальдура|Вратами Бальдура]]. Как-то связан с [[Иллитиды|иллитидами]]. По итогу всё же умер окончательно.
