--- a/content/Действующие лица/Считаются мёртвыми/Ксин.md
+++ b/content/Действующие лица/Считаются мёртвыми/Ксин.md
@@ -7,4 +7,20 @@ gender: Ж
 organisation:
 dead: true
 ---
+
+> [!infobox]
+> 
+> ## Ксин
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Лускан]] |
+> | Раса | Тритон |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Мёртв(а) |
+
 Тритон. Воительница из подводного мира, колдун заключившая договор с [[Мурена|Муреной]]. Была изгнана на поверхность. Работала караванщиком, между [[Лускан|Лусканом]] и [[Невервинтер|Невервинтером]]. Отправилась в путешествие по требованию своего покровителя. Достаточно высокомерна, однако обладает достаточно чёткими принципами и убеждениями. Сестра [[Селес|Эмили]].
