--- a/content/Действующие лица/Считаются мёртвыми/Маргарита Кляйн.md
+++ b/content/Действующие лица/Считаются мёртвыми/Маргарита Кляйн.md
@@ -9,4 +9,20 @@ gender: Ж
 organisation: 
 dead: true
 ---
-Мать [[Тори Кляйн]], жена [[Фауст Кляйн|Фауста Кляйн]]
+
+> [!infobox]
+> 
+> ## Маргарита Кляйн
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Неизвестно |
+> | Раса | Неизвестно |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Мёртв(а) |
+
+ [[Тори Кляйн]], жена [[Фауст Кляйн|Фауста Кляйн]]
