--- a/content/Действующие лица/Считаются мёртвыми/Наниматели Азар/Идрис.md
+++ b/content/Действующие лица/Считаются мёртвыми/Наниматели Азар/Идрис.md
@@ -11,6 +11,22 @@ organisation:
   - Неизвестно
 dead: true
 ---
-![[Pasted image 20240220214323.png|300]]
+
+> [!infobox]
+> 
+> ## Идрис
+> 
+> ![[Идрис.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Неизвестно |
+> | Раса | [[Юань-ти]] |
+> | Пол | Ж |
+> | Организация | Наниматели Азар,[[Дом Экстаминос]],Неизвестно |
+> | Статус | Мёртв(а) |
 
 Женщина, которая не поскупиться использовать все что у неё есть в арсенале, чтобы добиться цели. Не в плане применения силы, а скорее используя свои природную харизму и очарование, которыми она легко обводила людей вокруг своего пальца. Саркастична, хитра. Но не самая умная из команды. Редко, но могла допустить оплошность, за что потом ее ждал короткий диалог с другими из команды. Однако видимо из-за боязни за свою позицию присмыкалась перед другими на сколько могла,  так что скорее была инструментом, а не мозгом
