--- a/content/Действующие лица/Считаются мёртвыми/Наниматели Азар/Несса.md
+++ b/content/Действующие лица/Считаются мёртвыми/Наниматели Азар/Несса.md
@@ -11,7 +11,23 @@ organisation:
   - Неизвестно
 dead: true
 ---
-![[Pasted image 20240220214457.png|300]]
+
+> [!infobox]
+> 
+> ## Несса
+> 
+> ![[Несса.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Неизвестно |
+> | Раса | [[Юань-ти]] |
+> | Пол | Ж |
+> | Организация | Наниматели Азар,[[Дом Экстаминос]],Неизвестно |
+> | Статус | Мёртв(а) |
 
 Вот её можно было назвать мозгом группы. Однако голос её никогда не был слышен на публике. Обычно она передавала всю информацию телепатически, либо в редких случаях на ухо или в диалоге тет-а-тет. Однако раскрывала свой рот лишь при людях, кого уважала или кто был выше ее по званию.
 Почти всегда находилась рядом с Сареком.
