--- a/content/Действующие лица/Считаются мёртвыми/Наниматели Азар/Тис'иан.md
+++ b/content/Действующие лица/Считаются мёртвыми/Наниматели Азар/Тис'иан.md
@@ -11,6 +11,21 @@ organisation:
   - Неизвестно
 dead: true
 ---
-![[Pasted image 20240220214533.png|300]]
+> [!infobox]
+> 
+> ## Тис'иан
+> 
+> ![[Тис'иан.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Неизвестно |
+> | Раса | [[Юань-ти]] |
+> | Пол | Ж |
+> | Организация | Наниматели Азар,[[Дом Экстаминос]],Неизвестно |
+> | Статус | Мёртв(а) |
 
 Второй боец группы, однако входил скорее в основной ее состав, в отличие от Азар. Довольно умный, немногословный. Правда в отличие от Нессы эта немногословность не была слишком сильной. Мог порой высказать свое мнение, порой даже оно могло идти против Сарека или Нессы, однако его учитывали. Так же удивительно, что такие высказывания спускали с рук. Старший член группы. Как и Азар, не так хорошо скрывает свою расу, да и змеиной крови в нем больше чем в Азар. Однако это его явно не стесняет. С кем-то вне команды он не был заинтересован, чтоб вести диалоги.
