--- a/content/Действующие лица/Поместье Рейвентри/Кернерос.md
+++ b/content/Действующие лица/Поместье Рейвентри/Кернерос.md
@@ -11,4 +11,20 @@ race:
   - Неизвестно
 gender: 
 ---
+
+> [!infobox]
+> 
+> ## Кернерос
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Чемпион |
+> | Местонахождение | [[Поместье Рейвентри]],План фей |
+> | Раса | Неизвестно |
+> | Пол | Нет данных |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Обитатель этого места ещё до попадания на план фей особняка.  Телохранитель с [[Элсиет Корвинар]].
