--- a/content/Действующие лица/Поместье Рейвентри/Крин Корвинар.md
+++ b/content/Действующие лица/Поместье Рейвентри/Крин Корвинар.md
@@ -7,4 +7,20 @@ gender: МЖ
 organisation:
 dead: 
 ---
+
+> [!infobox]
+> 
+> ## Крин Корвинар
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Нет данных |
+> | Раса | Нет данных |
+> | Пол | МЖ |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Судя по [[Обуглянный клочок бумаги в камине|обуглянному клочку бумаги]], найденном в камине особняка на материальном плане, сын [[Дарриус Корвинар|Дарриуса]].
