--- a/content/Действующие лица/Поместье Рейвентри/Разгул.md
+++ b/content/Действующие лица/Поместье Рейвентри/Разгул.md
@@ -12,4 +12,20 @@ gender: Неизвестно
 organisation: 
 dead: 
 ---
+
+> [!infobox]
+> 
+> ## Разгул
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Разгула,Разгулу |
+> | Местонахождение | [[Поместье Рейвентри]],План фей |
+> | Раса | Неизвестно |
+> | Пол | Неизвестно |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Скорее всего является духом, который пожирает всё и всех, кто близок к нему. Явно не гуманоид.
