--- a/content/Действующие лица/Поместье Рейвентри/Шамбли.md
+++ b/content/Действующие лица/Поместье Рейвентри/Шамбли.md
@@ -11,4 +11,20 @@ gender: Неизвестно
 organisation: 
 dead: 
 ---
+
+> [!infobox]
+> 
+> ## Шамбли
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| шаркун |
+> | Местонахождение | [[Поместье Рейвентри]] |
+> | Раса | Неизвестно |
+> | Пол | Неизвестно |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
 Большое растение, питомец [[Поместье Рейвентри|поместья]]. Нельзя уничтожить. 
