--- a/content/Действующие лица/Считаются мёртвыми/Валаркен.md
+++ b/content/Действующие лица/Считаются мёртвыми/Валаркен.md
@@ -11,5 +11,20 @@ gender: М
 dead: true
 ---
 
+> [!infobox]
+> 
+> ## Валаркен
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Нет данных |
+> | Раса | Ликантроп |
+> | Пол | М |
+> | Организация | [[Совет Четырёх]],[[Правительство Врат Бальдура]] |
+> | Статус | Мёртв(а) |
+
 Великий герцог Валаркен был одним из правителей [[Врата Бальдура|Врат Бальдура]] в середине #XV века ЛД.
 Он прославился тем, что возглавил переворот против своих коллег - [[Совет Четырёх|Великих Герцогов]], пытаясь получить единоличную власть над Вратами.
