--- a/content/Действующие лица/Считаются мёртвыми/Наниматели Азар/Сарек.md
+++ b/content/Действующие лица/Считаются мёртвыми/Наниматели Азар/Сарек.md
@@ -11,7 +11,23 @@ organisation:
   - Неизвестно
 dead: true
 ---
-![[Pasted image 20240220214415.png|300]]
+
+> [!infobox]
+> 
+> ## Сарек
+> 
+> ![[Сарек.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Неизвестно |
+> | Раса | [[Юань-ти]] |
+> | Пол | М |
+> | Организация | Наниматели Азар,[[Дом Экстаминос]],Неизвестно |
+> | Статус | Мёртв(а) |
 
 Лидер группы, которую охраняла Азар. Голос очень спокойный и мягкий большую часть времени. Ему обычно не нужно было ни повышать голос, да и объяснять несколько раз. Все всегда делали с первого его слова. Часто он в одиночку участвовал в деловых сделках, вроде даже успешно, ибо даже раздражение нельзя было заметить на его лице. Спокойный, уверенный в себе лидер. К Азар был терпим
 Внешность чем-то схожа с [[Сангмин|Сангмином]]
